--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>저녁뭐먹지?!</title>
+    <title>편스토랑 - 우아한 한끼를 보장합니다.</title>
 
 
 
@@ -20,7 +20,7 @@
   <body>
     <div class="navbar-wrapper">
       <div class="container">
-          <h1>저녁 뭐먹지!! - 편의점편</h1>
+          <h1>편스토랑 - 우아한 한끼를 보장합니다.</h1>
           <hr/>
       </div>
     </div>
@@ -31,11 +31,11 @@
         
       <div class="row">
         <div class="col-xs-12 col-sm-6">
-          <iframe src='https://webchat.botframework.com/embed/What_dinner?s=EFECSFQqkOA.H1U3hBPB2bQorZL3_OZV383PRk6KKQTya9VmcDcB2iI'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+          <iframe src='https://webchat.botframework.com/embed/Convenience?s=bqUuvQFXh6Y.JqTwigM5S3jRSWQjWnsx3VDVhK12FJ_lFXOVqZSZ09c'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
         </div>
           <div class="col-xs-12 col-sm-6">
               <img class="img-rectangle" src="img/shop.jpg" alt="CDN" height="220">
-              <h2>편의점 뭐먹지?!</h2>
+              <h2>편스토랑</h2>
               <p>MS와 함께하는 Chat Bot 경진대회 - 저녁뭐먹지 팀입니다.</p>
               <p>편의점에서 뭐 사먹을지/어떻게 사먹을지 추천합니다.</p>
               <p>현재 가능한 명령은 '명령어'를 입력하면 확인할 수 있습니다.</p>
